--- a/package.json
+++ b/package.json
@@ -6,53 +6,66 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand",
+    "test": "npm run karma",
+    "test:watch": "npm run karma:watch",
+    "test:ci": "npm run karma:ci",
+    "karma": "npm run karma:watch",
+    "karma:watch": "ng test",
+    "karma:ci": "ng test --single-run",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
+    "jest:ci": "jest --runInBand",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.4",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/core": "^5.2.4",
-    "@angular/forms": "^5.2.4",
-    "@angular/http": "^5.2.4",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
-    "@angular/router": "^5.2.4",
-    "core-js": "^2.5.3",
-    "@ngrx/effects": "^5.0.1",
+    "@angular/animations": "^5.2.5",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/router": "^5.2.5",
+    "@ngrx/effects": "^5.1.0",
     "@ngrx/router-store": "^5.0.1",
-    "@ngrx/store": "5.0.0",
-    "@ngrx/store-devtools": "5.0.1",
+    "@ngrx/store": "5.1.0",
+    "@ngrx/store-devtools": "5.1.0",
+    "core-js": "^2.5.3",
+    "jest-html-reporter": "^1.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.8",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/language-service": "^5.2.4",
+    "@angular/cli": "1.7.0",
+    "@angular/compiler-cli": "^5.2.5",
+    "@angular/language-service": "^5.2.5",
     "@types/jasmine": "~2.8.6",
-    "@types/jest": "^22.1.2",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~4.0.36",
+    "@types/jest": "^22.1.3",
+    "@types/node": "~9.4.6",
     "codelyzer": "^4.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^22.2.2",
-    "jest-cli": "^22.2.2",
+    "jest": "^22.3.0",
+    "jest-cli": "^22.3.0",
     "jest-preset-angular": "^5.0.0",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "ngrx-store-freeze": "^0.2.1",
     "protractor": "~5.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.1"
+    "typescript": "~2.7.2"
   },
   "jest": {
     "preset": "jest-preset-angular",
+    "testResultsProcessor": "./node_modules/jest-html-reporter",
     "setupTestFrameworkScriptFile": "<rootDir>/src/jestSetup.ts",
     "globals": {
       "__TS_CONFIG__": "src/tsconfig.spec.json",
@@ -71,8 +84,7 @@
       "js",
       "html"
     ],
-    "moduleNameMapper": {
-    },
+    "moduleNameMapper": {},
     "transformIgnorePatterns": [
       "node_modules/(?!@ngrx)"
     ],
