--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-preset-angular": "^5.0.0",
     "jest-html-reporter": "^1.2.0",
     "ngrx-store-freeze": "^0.2.1",
+    "ngrx-store-localstorage": "^5.0.0",
     "protractor": "~5.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
