added tests for auth.actions.

--- a/jesthtmlreporter.config.json
+++ b/jesthtmlreporter.config.json
@@ -1,5 +1,5 @@
 {
-  "pageTitle": "Customer Portal Test Run",
+  "pageTitle": "angular starter test run",
   "outputPath": "test-reports/jest.html",
   "includeFailureMsg": true
 }
