--- a/package.json
+++ b/package.json
@@ -4,54 +4,62 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "prestart": "npm run tailwind",
     "start": "ng serve",
+    "prebuild": "npm run tailwind",
     "build": "ng build --prod",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "tailwind": "tailwind build tailwind-build.scss -c ./tailwind.js -o ./src/tailwind.scss"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.5",
-    "@angular/common": "^5.2.5",
-    "@angular/compiler": "^5.2.5",
-    "@angular/core": "^5.2.5",
-    "@angular/forms": "^5.2.5",
-    "@angular/http": "^5.2.5",
-    "@angular/platform-browser": "^5.2.5",
-    "@angular/platform-browser-dynamic": "^5.2.5",
-    "@angular/router": "^5.2.5",
-    "@ngrx/effects": "^5.1.0",
-    "@ngrx/router-store": "^5.0.1",
-    "@ngrx/store": "5.1.0",
-    "@ngrx/store-devtools": "5.1.0",
-    "core-js": "^2.5.3",
-    "install": "^0.10.4",
+    "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.0.1",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/material": "^6.0.1",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/router-store": "^5.2.0",
+    "@ngrx/store": "5.2.0",
+    "@ngrx/store-devtools": "5.2.0",
+    "core-js": "^2.5.6",
+    "install": "^0.11.0",
     "jwt-decode": "^2.2.0",
-    "npm": "^5.6.0",
-    "rxjs": "^5.5.6",
-    "rxjs-marbles": "^2.3.2",
-    "zone.js": "^0.8.20"
+    "npm": "^6.0.0",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
+    "rxjs-marbles": "^3.0.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.0",
-    "@angular/compiler-cli": "^5.2.5",
-    "@angular/language-service": "^5.2.5",
-    "@types/jest": "^22.1.3",
-    "@types/node": "~9.4.6",
-    "codelyzer": "^4.1.0",
-    "jest": "^22.3.0",
-    "jest-cli": "^22.3.0",
-    "jest-html-reporter": "^1.2.0",
-    "jest-preset-angular": "^5.0.0",
-    "ngrx-store-freeze": "^0.2.1",
+    "@angular/cli": "6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
+    "@types/jest": "^22.2.3",
+    "@types/node": "~10.0.4",
+    "codelyzer": "^4.3.0",
+    "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
+    "jest-html-reporter": "^2.3.0",
+    "jest-preset-angular": "^5.2.2",
+    "ngrx-store-freeze": "^0.2.2",
     "ngrx-store-localstorage": "^5.0.0",
-    "protractor": "~5.3.0",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "protractor": "~5.3.1",
+    "tailwindcss": "^0.5.2",
+    "ts-node": "~6.0.3",
+    "tslint": "~5.10.0",
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.0"
   },
   "jest": {
     "preset": "jest-preset-angular",
@@ -68,7 +76,6 @@
     "transform": {
       "^.+\\.(ts|js|html)$": "<rootDir>/node_modules/jest-preset-angular/preprocessor.js"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|js)$",
     "moduleFileExtensions": [
       "ts",
       "js",
