--- a/package.json
+++ b/package.json
@@ -5,65 +5,75 @@
   "scripts": {
     "ng": "ng",
     "prestart": "npm run tailwind",
-    "start": "ng serve",
+    "start": "ng run angularstarter:serve:local",
+    "prestart:e2e": "npm run tailwind",
+    "start:e2e": "ng run angularstarter:serve:e2e",
     "prebuild": "npm run tailwind",
     "build": "ng build --prod",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "test:ci": "jest --runInBand",
+    "test:ci:coverage": "jest --runInBand --coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "pree2e": "webdriver-manager update --ignore_ssl",
+    "e2e": "protractor",
     "tailwind": "tailwind build tailwind-build.scss -c ./tailwind.js -o ./src/tailwind.scss"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/cdk": "^6.0.1",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/material": "^6.0.1",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "@ngrx/effects": "^5.2.0",
-    "@ngrx/router-store": "^5.2.0",
-    "@ngrx/store": "5.2.0",
-    "@ngrx/store-devtools": "5.2.0",
-    "core-js": "^2.5.6",
-    "install": "^0.11.0",
+    "@angular/animations": "^6.1.8",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.8",
+    "@angular/compiler": "^6.1.8",
+    "@angular/core": "^6.1.8",
+    "@angular/forms": "^6.1.8",
+    "@angular/http": "^6.1.8",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.8",
+    "@angular/platform-browser-dynamic": "^6.1.8",
+    "@angular/router": "^6.1.8",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/router-store": "^6.1.0",
+    "@ngrx/store": "6.1.0",
+    "@ngrx/store-devtools": "6.1.0",
+    "core-js": "^2.5.7",
+    "install": "^0.12.1",
     "jwt-decode": "^2.2.0",
-    "npm": "^6.0.0",
-    "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0",
-    "rxjs-marbles": "^3.0.1",
+    "npm": "^6.4.1",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
+    "rxjs-marbles": "^4.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
-    "@types/jest": "^22.2.3",
-    "@types/node": "~10.0.4",
-    "codelyzer": "^4.3.0",
-    "jest": "^22.4.3",
-    "jest-cli": "^22.4.3",
-    "jest-html-reporter": "^2.3.0",
-    "jest-preset-angular": "^5.2.2",
-    "ngrx-store-freeze": "^0.2.2",
-    "ngrx-store-localstorage": "^5.0.0",
-    "protractor": "~5.3.1",
-    "tailwindcss": "^0.5.2",
-    "ts-node": "~6.0.3",
-    "tslint": "~5.10.0",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "@angular/cli": "6.2.3",
+    "@angular/compiler-cli": "^6.1.8",
+    "@angular/language-service": "^6.1.8",
+    "@types/chai": "^4.1.4",
+    "@types/cucumber": "^4.0.4",
+    "@types/jest": "^23.3.2",
+    "@types/node": "~10.10.1",
+    "chai": "^4.1.2",
+    "codelyzer": "^4.4.4",
+    "cucumber": "^5.0.1",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "jest-html-reporter": "^2.4.2",
+    "jest-preset-angular": "^6.0.1",
+    "ngrx-store-freeze": "^0.2.4",
+    "ngrx-store-localstorage": "^5.0.1",
+    "protractor": "~5.4.1",
+    "protractor-cucumber-framework": "^6.1.1",
+    "tailwindcss": "^0.6.5",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "2.9.2",
+    "@angular-devkit/build-angular": "~0.8.3"
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "testResultsProcessor": "./node_modules/jest-html-reporter",
+    "testResultsProcessor": "jest-html-reporter",
     "setupTestFrameworkScriptFile": "<rootDir>/src/jestSetup.ts",
     "globals": {
       "__TS_CONFIG__": "src/tsconfig.spec.json",
